# BumbleCee

./: .gitignore  BuildDockerAndUpload.sh  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  generateStackFlame.sh  main  main.cpp  out  streamAndDownload.sh  streamOpus.sh  systemStackCapture.sh  temp  temp.info.json  youtube-search.py  yt-download.py
Temp/: CurMusic
include/: AsyncDownloadManager.hpp  Bot.cpp  Bot.hpp  BumbleBee.hpp  BumbleBeeCommand.hpp  BumbleCee.cpp  BumbleCee.hpp  BumbleCeepp.hpp  CommandType.hpp  Commands.hpp  FQueueElement.hpp  MusicPlayManager.hpp  MusicQueue.hpp
include/Audio/: MusicPlayManager.hpp
include/Commands/: BumbleBeeCommand.hpp  CommandType.hpp  Commands.hpp  Delete.hpp  Join.hpp  Leave.hpp  Play.hpp  Queue.hpp  Repeat.hpp  Skip.hpp
include/Queue/: MusicQueue.hpp  MusicQueueElement.hpp
include/Settings/: SettingsManager.hpp
include/Utils/: AsyncDownloadManager.hpp  ConsoleUtils.hpp  QueuedMusicListEmbedProvider.hpp  VersionsCheckUtils.hpp
src/: AsyncDownloadManager.cpp  Bot.cpp  BumbleBee.cpp  BumbleCeepp.cpp  Join.cpp  MusicQueue.cpp  Play.cpp  Queue.cpp  main.cpp  out  test.py  yt-download.py
src/Audio/: MusicPlayManager.cpp
src/Commands/: CommandType.cpp  Delete.cpp  Leave.cpp  Play.cpp  Queue.cpp  Repeat.cpp  Shuffle.cpp  Skip.cpp
src/Music/: Archive  OSeStDEAZJQ.info.json
src/Queue/: MusicQueue.cpp
src/Settings/: SettingsManager.cpp
src/Utils/: AsyncDownloadManager.cpp
